--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.16.0",
     "bootstrap": "^3.3.7",
     "connect-flash": "^0.1.1",
@@ -17,6 +18,8 @@
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.2"
   }
 }
