--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "~4.14.1",
     "express-session": "^1.15.1",
     "express-validator": "^3.1.2",
+    "file-system": "^2.2.2",
     "hbs": "~4.0.1",
+    "html-pdf": "^2.1.0",
     "mongoose": "^4.8.5",
     "mongoose-seed": "^0.3.1",
     "morgan": "~1.7.0",
